# fce

./: .gitignore  README.md  __init__.py  __main__.py  fce.py  objects.py  pyproject.toml  release.sh  run_engine.py  setup.py
.github/workflows/: publish.yml
engine/: analytical_loop.py  downloader.py  fitter.py  path_cold.py  path_filter.py  path_final.py  plotter.py
fce/: README.md  fce.py
ui/: components.py  graph.py  state.py
